Add option to run the app via electron